put label in detailtextlabel

--- a/Lighthouse/Base.lproj/Main.storyboard
+++ b/Lighthouse/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15A279b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
@@ -519,40 +519,40 @@
                                 <exclude reference="Xip-bT-2bZ"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="Yse-Lz-u4T"/>
+                                <exclude reference="6cp-Np-ONl"/>
+                                <exclude reference="FiJ-Rd-pdJ"/>
+                                <exclude reference="ulP-qa-Awb"/>
+                                <exclude reference="3EI-H4-yrf"/>
+                                <exclude reference="LUI-LY-dWA"/>
+                                <exclude reference="LUl-ue-i1x"/>
+                                <exclude reference="20q-L6-HY4"/>
+                                <exclude reference="2X4-6g-bCz"/>
+                                <exclude reference="GyZ-VR-Kz8"/>
+                                <exclude reference="yP3-Vi-sob"/>
                                 <exclude reference="5H8-jb-VSK"/>
                                 <exclude reference="E9I-mZ-Pfk"/>
                                 <exclude reference="NXZ-ya-qT3"/>
                                 <exclude reference="Tgc-c8-nRq"/>
                                 <exclude reference="Usf-Mj-R8h"/>
                                 <exclude reference="WA8-5i-RHn"/>
-                                <exclude reference="3EI-H4-yrf"/>
-                                <exclude reference="LUI-LY-dWA"/>
-                                <exclude reference="LUl-ue-i1x"/>
-                                <exclude reference="iBF-l5-dHP"/>
-                                <exclude reference="nPe-VG-Y1u"/>
-                                <exclude reference="sT0-9B-TZN"/>
-                                <exclude reference="KeG-zK-IfV"/>
-                                <exclude reference="aQI-6o-6wK"/>
-                                <exclude reference="bio-6d-Mi5"/>
-                                <exclude reference="Exe-Xz-MTG"/>
-                                <exclude reference="Fxk-ws-yEz"/>
-                                <exclude reference="r3j-vV-MRI"/>
-                                <exclude reference="6cp-Np-ONl"/>
-                                <exclude reference="FiJ-Rd-pdJ"/>
-                                <exclude reference="ulP-qa-Awb"/>
-                                <exclude reference="Nb5-d0-CAP"/>
-                                <exclude reference="faD-1L-ISW"/>
-                                <exclude reference="pXx-6B-gXp"/>
                                 <exclude reference="1HW-sm-i2N"/>
                                 <exclude reference="EJx-8R-6Kl"/>
                                 <exclude reference="euu-4q-yYo"/>
                                 <exclude reference="jtt-ut-ndU"/>
                                 <exclude reference="tfM-Nj-uZn"/>
-                                <exclude reference="20q-L6-HY4"/>
-                                <exclude reference="2X4-6g-bCz"/>
-                                <exclude reference="GyZ-VR-Kz8"/>
-                                <exclude reference="yP3-Vi-sob"/>
-                                <exclude reference="Yse-Lz-u4T"/>
+                                <exclude reference="Nb5-d0-CAP"/>
+                                <exclude reference="faD-1L-ISW"/>
+                                <exclude reference="pXx-6B-gXp"/>
+                                <exclude reference="Exe-Xz-MTG"/>
+                                <exclude reference="Fxk-ws-yEz"/>
+                                <exclude reference="r3j-vV-MRI"/>
+                                <exclude reference="KeG-zK-IfV"/>
+                                <exclude reference="aQI-6o-6wK"/>
+                                <exclude reference="bio-6d-Mi5"/>
+                                <exclude reference="iBF-l5-dHP"/>
+                                <exclude reference="nPe-VG-Y1u"/>
+                                <exclude reference="sT0-9B-TZN"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -568,40 +568,40 @@
                                 <include reference="Xip-bT-2bZ"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="Yse-Lz-u4T"/>
+                                <include reference="6cp-Np-ONl"/>
+                                <exclude reference="FiJ-Rd-pdJ"/>
+                                <exclude reference="ulP-qa-Awb"/>
+                                <include reference="3EI-H4-yrf"/>
+                                <include reference="LUI-LY-dWA"/>
+                                <include reference="LUl-ue-i1x"/>
+                                <include reference="20q-L6-HY4"/>
+                                <include reference="2X4-6g-bCz"/>
+                                <include reference="GyZ-VR-Kz8"/>
+                                <include reference="yP3-Vi-sob"/>
                                 <exclude reference="5H8-jb-VSK"/>
                                 <exclude reference="E9I-mZ-Pfk"/>
                                 <exclude reference="NXZ-ya-qT3"/>
                                 <include reference="Tgc-c8-nRq"/>
                                 <include reference="Usf-Mj-R8h"/>
                                 <exclude reference="WA8-5i-RHn"/>
-                                <include reference="3EI-H4-yrf"/>
-                                <include reference="LUI-LY-dWA"/>
-                                <include reference="LUl-ue-i1x"/>
-                                <include reference="iBF-l5-dHP"/>
-                                <include reference="nPe-VG-Y1u"/>
-                                <include reference="sT0-9B-TZN"/>
-                                <include reference="KeG-zK-IfV"/>
-                                <include reference="aQI-6o-6wK"/>
-                                <include reference="bio-6d-Mi5"/>
-                                <include reference="Exe-Xz-MTG"/>
-                                <include reference="Fxk-ws-yEz"/>
-                                <include reference="r3j-vV-MRI"/>
-                                <include reference="6cp-Np-ONl"/>
-                                <exclude reference="FiJ-Rd-pdJ"/>
-                                <exclude reference="ulP-qa-Awb"/>
-                                <include reference="Nb5-d0-CAP"/>
-                                <include reference="faD-1L-ISW"/>
-                                <include reference="pXx-6B-gXp"/>
                                 <exclude reference="1HW-sm-i2N"/>
                                 <exclude reference="EJx-8R-6Kl"/>
                                 <exclude reference="euu-4q-yYo"/>
                                 <include reference="jtt-ut-ndU"/>
                                 <include reference="tfM-Nj-uZn"/>
-                                <include reference="20q-L6-HY4"/>
-                                <include reference="2X4-6g-bCz"/>
-                                <include reference="GyZ-VR-Kz8"/>
-                                <include reference="yP3-Vi-sob"/>
-                                <include reference="Yse-Lz-u4T"/>
+                                <include reference="Nb5-d0-CAP"/>
+                                <include reference="faD-1L-ISW"/>
+                                <include reference="pXx-6B-gXp"/>
+                                <include reference="Exe-Xz-MTG"/>
+                                <include reference="Fxk-ws-yEz"/>
+                                <include reference="r3j-vV-MRI"/>
+                                <include reference="KeG-zK-IfV"/>
+                                <include reference="aQI-6o-6wK"/>
+                                <include reference="bio-6d-Mi5"/>
+                                <include reference="iBF-l5-dHP"/>
+                                <include reference="nPe-VG-Y1u"/>
+                                <include reference="sT0-9B-TZN"/>
                             </mask>
                         </variation>
                     </view>
@@ -751,12 +751,10 @@
                                 <exclude reference="oof-Wl-ac8"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="8n5-LS-oCO"/>
-                                <exclude reference="VfP-bb-EBv"/>
-                                <exclude reference="xaM-FI-Gr4"/>
-                                <exclude reference="1R1-5Q-9Dc"/>
-                                <exclude reference="gUE-Ii-ie0"/>
-                                <exclude reference="wej-v2-YSQ"/>
+                                <exclude reference="71W-Ky-9Pr"/>
+                                <exclude reference="77y-HH-E9y"/>
+                                <exclude reference="lD4-Me-pbE"/>
+                                <exclude reference="y5G-pb-Bf4"/>
                                 <exclude reference="Ffd-Wi-q9g"/>
                                 <exclude reference="Kx3-ZS-T9V"/>
                                 <exclude reference="OFH-Oj-UGu"/>
@@ -764,10 +762,12 @@
                                 <exclude reference="fck-oG-gh4"/>
                                 <exclude reference="iLf-za-L1M"/>
                                 <exclude reference="o0w-nz-Vz6"/>
-                                <exclude reference="71W-Ky-9Pr"/>
-                                <exclude reference="77y-HH-E9y"/>
-                                <exclude reference="lD4-Me-pbE"/>
-                                <exclude reference="y5G-pb-Bf4"/>
+                                <exclude reference="1R1-5Q-9Dc"/>
+                                <exclude reference="gUE-Ii-ie0"/>
+                                <exclude reference="wej-v2-YSQ"/>
+                                <exclude reference="8n5-LS-oCO"/>
+                                <exclude reference="VfP-bb-EBv"/>
+                                <exclude reference="xaM-FI-Gr4"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
@@ -777,12 +777,10 @@
                                 <include reference="oof-Wl-ac8"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="8n5-LS-oCO"/>
-                                <include reference="VfP-bb-EBv"/>
-                                <include reference="xaM-FI-Gr4"/>
-                                <include reference="1R1-5Q-9Dc"/>
-                                <include reference="gUE-Ii-ie0"/>
-                                <include reference="wej-v2-YSQ"/>
+                                <include reference="71W-Ky-9Pr"/>
+                                <include reference="77y-HH-E9y"/>
+                                <include reference="lD4-Me-pbE"/>
+                                <exclude reference="y5G-pb-Bf4"/>
                                 <exclude reference="Ffd-Wi-q9g"/>
                                 <exclude reference="Kx3-ZS-T9V"/>
                                 <include reference="OFH-Oj-UGu"/>
@@ -790,10 +788,12 @@
                                 <include reference="fck-oG-gh4"/>
                                 <include reference="iLf-za-L1M"/>
                                 <exclude reference="o0w-nz-Vz6"/>
-                                <include reference="71W-Ky-9Pr"/>
-                                <include reference="77y-HH-E9y"/>
-                                <include reference="lD4-Me-pbE"/>
-                                <exclude reference="y5G-pb-Bf4"/>
+                                <include reference="1R1-5Q-9Dc"/>
+                                <include reference="gUE-Ii-ie0"/>
+                                <include reference="wej-v2-YSQ"/>
+                                <include reference="8n5-LS-oCO"/>
+                                <include reference="VfP-bb-EBv"/>
+                                <include reference="xaM-FI-Gr4"/>
                             </mask>
                         </variation>
                     </view>
